--- a/templates/index.html
+++ b/templates/index.html
@@ -23,12 +23,12 @@ TENACIOUS BIRD OF PREY
 
 
  <audio autoplay id="bgsound" loop>
-  <source src="static/audio/old d chord.mp3"
+  <source src="static/audio/old d chord-new.mp3"
          type="audio/mp3">
  </audio>
 
 <Center><br>
-<a href="http://dokimos.org/main.html"><IMG SRC="static/img/tbop.png" WIDTH=50% HEIGHT=65%
+<a href="songs"><IMG SRC="static/img/tbop.png" WIDTH=50% HEIGHT=65%
                                             ALT="tENACIOUS BIRD OF PREY" BORDER=0></a>
 
 <BR><B>
@@ -54,24 +54,24 @@ TENACIOUS BIRD OF PREY
 <FONT SIZE=7>&nbsp;</FONT>
 </TD></TR>
 <TR><TD ALIGN=CENTER>
-<A HREF="../main.html"
+<A HREF="songs"
  onMouseover= "moveIn('pic1'); return true"
  onMouseout= "moveOut('pic1');"><IMG NAME="pic1" SRC="static/img/doorclose.gif" HEIGHT=144 WIDTH=80 BORDER=0
-                                     ALT="Enter dokimos"></A></TD></TR></TABLE>
+                                     ALT="Enter"></A></TD></TR></TABLE>
 </SPAN></SPAN></SPAN>
 
 </Center>
 
 <SPAN ID='archL2'>
-<a href="http://dokimos.org/list/select.html"><IMG SRC='static/img/archL2.gif' BORDER=0></a>
+<a href="songs"><IMG SRC='static/img/archL2.gif' BORDER=0></a>
 </SPAN>
 
 <SPAN ID='archR2'>
-<a href="http://dokimos.org/list/select.html"><IMG SRC='static/img/archR2.gif' BORDER=0></a>
+<a href="songs"><IMG SRC='static/img/archR2.gif' BORDER=0></a>
 </SPAN>
 
 <SPAN ID='ladderR'>
-<a href="http://dokimos.org/list/explore.html"><IMG SRC='static/img/ladderR.gif' BORDER=0></a>
+<a href="songs"><IMG SRC='static/img/ladderR.gif' BORDER=0></a>
 </SPAN>
 
 <SPAN ID='constr'>
@@ -79,21 +79,21 @@ TENACIOUS BIRD OF PREY
 </SPAN>
 
 <SPAN ID='constr'>
-<a href="http://dokimos.org/list/pages.html"><IMG SRC='static/img/constr3.gif' BORDER=0></a>
+<a href="songs"><IMG SRC='static/img/constr3.gif' BORDER=0></a>
 </SPAN>
 
 <SPAN ID="catrun">
-<MARQUEE DIRECTION="right" WIDTH="2000"><a href="http://dokimos.org/decision"><IMG SRC="static/img/blackcat.gif"
+<MARQUEE DIRECTION="right" WIDTH="2000"><a href="songs"><IMG SRC="static/img/blackcat.gif"
                                                                                    !style="filter:progid:DXImageTransform.Microsoft.
                                                                                    BasicImage(mirror=1)" border=0></a></MARQUEE>
 </SPAN>
 
 <SPAN ID='ladderL'>
-<a href="http://dokimos.org/list/explore.html"><IMG SRC='static/img/ladderL.gif' BORDER=0></a><IMG SRC='static/img/dooropen.gif' WIDTH=1 HEIGHT=1><IMG SRC='static/img/doorclose.gif' WIDTH=1 HEIGHT=1>
+<a href="songs"><IMG SRC='static/img/ladderL.gif' BORDER=0></a><IMG SRC='static/img/dooropen.gif' WIDTH=1 HEIGHT=1><IMG SRC='static/img/doorclose.gif' WIDTH=1 HEIGHT=1>
 </SPAN>
 
 <SPAN ID='paint'>
-<a href="http://dokimos.org/list/select.html"><IMG SRC='static/img/paintcan.gif'
+<a href="songs"><IMG SRC='static/img/paintcan.gif'
                                                    BORDER=0 !style='border:0;display:inline-block,transform:scale(-1,1);
                                                                     -webkit-transform:scale(-1,1);-moz-transform:scale(-1,1);
                                                                     -o-transform:scale(-1,1)'></a>
@@ -119,7 +119,7 @@ TENACIOUS BIRD OF PREY
 </P>
 
 <DIV ID="flyimage1" STYLE="position:absolute; left: -500px; width:47; height:68;">
-<a href="http://dokimos.org/main.html"><img src="static/img/bird.gif" border=0></a>
+<a href="songs"><img src="static/img/bird.gif" border=0></a>
 </DIV>
 
 </Body>
