--- a/templates/songs.html
+++ b/templates/songs.html
@@ -1,26 +1,28 @@
-<html>
-<head>
-<title>Wives should teach their husbands submission</title>
-<style>
-html {
-  background: url(submission.gif) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-</style>
-</head>
-<body>
+<script type="text/javascript" src="/static/js/moveobj.js"></script>
+ <script src="/static/js/flyimage.js" type="text/javascript">
+</script>
 
-<center><a href="http://maverickchristians.com"><img src="MaverickChristians-Banner2.png" width=468 height=60 border=0></a></center></font>
+<body style="background-color:dimgrey;">
+<Center><br>
+<a href="reddit.com"><IMG SRC="static/img/tbop-bw.png" WIDTH=50% HEIGHT=65%
+                                            ALT="tENACIOUS BIRD OF PREY" BORDER=0></a>
 
+
+    <SPAN ID="catrun">
+<MARQUEE DIRECTION="right" WIDTH="2000"><a href="songs"><IMG SRC="static/img/blackcat.gif"
+!style="filter:progid:DXImageTransform.Microsoft.BasicImage(mirror=1)" border=0></a></MARQUEE>
+<div>
+<SPAN ID='archL2'>
+    <a href="songs"><IMG SRC='static/img/bird-L.png' BORDER=0></a>
+        <a href="songs"><IMG SRC='static/img/bird-R.png' BORDER=0></a>
+    </SPAN>
+</div>
+<br>Carving Through The Kill Stone_00<br>
+        <iframe width="50%" height="450" scrolling="no" frameborder="yes"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/313170456&amp;auto_play=false&amp;
+                 hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe
 <br><br>
-
-<div style="text-align: center;"><font face="Lucida, Lucida Calligraphy" size=6 color="#990000"><b>Wives should teach<br>their husbands<br>submission</b></font></div>
-
-<div style="position: absolute; top: 50%; left: 50%; margin-left:-200px; margin-top:-120px;"><center><font face="Arial Bold" size=7><b><a href="http://maverickchristians.com/2012/07/02/wives-should-teach-their-husbands-submission"><img src="submit.gif" width=400 height=250 border=0></a></div>
-
-<div style="position: absolute; bottom: 0%; left: 50%; margin-left:-175px;"><center><font face="Bookman Old Style" size=3 color="#ffaaaa"><b>but whoever desires to become great among you,<br><font size="+2">let him be your servant.</font><br>And whoever desires to be first among you,<br><font size="+2">let him be your slave—</font><br>- Matthew 20:26b-27 <small>NKJV</small></b><br><br><br><br></font></center></div>
-</body>
-</html>
+        <SPAN ID='archL2'>
+    <a href="songs"><IMG SRC='static/img/bird-L.png' BORDER=0></a>
+        <a href="songs"><IMG SRC='static/img/bird-R.png' BORDER=0></a>
+    </SPAN>
