--- a/templates/songs.html
+++ b/templates/songs.html
@@ -1,3 +1,26 @@
+
+<head>
+
+
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Outline|Orbitron|Press+Start+2P|VT323" rel="stylesheet">
+
+    font-family: 'Orbitron', sans-serif;
+font-family: 'VT323', monospace;
+font-family: 'Bungee Outline', cursive;
+font-family: 'Press Start 2P', cursive;
+
+     <style>
+      body {
+        font-family: 'Press Start 2P', cursive;
+
+        font-size: 18px;
+      }
+    </style>
+    </head>>
+
+
+
+
 <script type="text/javascript" src="/static/js/moveobj.js"></script>
  <script src="/static/js/flyimage.js" type="text/javascript">
 </script>
@@ -17,7 +40,8 @@
         <a href="songs"><IMG SRC='static/img/bird-R.png' BORDER=0></a>
     </SPAN>
 </div>
-<br>Carving Through The Kill Stone_00<br>
+<br  font-family: 'Press Start 2P', cursive; >Below are songs. Click the play icon.<br>
+<br>Carving Through The Kill Stone_00 v0<br>
         <iframe width="50%" height="450" scrolling="no" frameborder="yes"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/313170456&amp;auto_play=false&amp;
                  hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe
@@ -26,3 +50,28 @@
     <a href="songs"><IMG SRC='static/img/bird-L.png' BORDER=0></a>
         <a href="songs"><IMG SRC='static/img/bird-R.png' BORDER=0></a>
     </SPAN>
+<br><br>
+
+
+
+<br>Carving Through The Kill Stone_00 v1<br>
+
+        <iframe width="50%" height="450" scrolling="no" frameborder="yes"
+                src="https://www.youtube.com/embed/7QQFlZjB8_o?ecver=2"amp;auto_play=false&amp;
+                 hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe
+<br><br>
+        <SPAN ID='archL2'>
+    <a href="songs"><IMG SRC='static/img/bird-L.png' BORDER=0></a>
+        <a href="songs"><IMG SRC='static/img/bird-R.png' BORDER=0></a>
+    </SPAN>
+<br><br>
+
+
+
+<br>Carving Through The Kill Stone_01<br>
+
+        <iframe width="50%" height="450" scrolling="no" frameborder="yes"
+                src="https://www.youtube.com/embed/kUGZC1tfkkU?ecver=2""amp;auto_play=false&amp;
+                 hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe
+
+
